Archive/testpo.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: 21e45a94038c2a0ace5512d5f8a287988e87c5afb930b4e38c8164518bf4898a
    cni.projectcalico.org/podIP: 172.17.230.235/32
    cni.projectcalico.org/podIPs: 172.17.230.235/32
  creationTimestamp: "2024-11-20T05:59:39Z"
  labels:
    run: bb1
  name: bb1
  namespace: ohdsi-test
  resourceVersion: "21263044"
  uid: 660cf604-c552-4df7-99cb-0ea62ff16cc3
spec:
  containers:
  - args:
    - sleep
    - "3600"
    image: busybox
    imagePullPolicy: Always
    name: bb1
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-cvn4f
      readOnly: true
    - name: persistence
      mountPath: /data
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: dev-kmwoqttsbhle-default-worker-kkjg5-grrh7
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: persistence
    persistentVolumeClaim:
      claimName: postgres-pv-claim
  - name: kube-api-access-cvn4f
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
