Archive/atlas-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: atlas
  name: atlas
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: atlas
  type: NodePort
status:
  loadBalancer: {}
