Archive/ngrok-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas
  namespace: ohdsi
spec:
  ingressClassName: ngrok
  rules:
  - host: immune-crayfish-expert.ngrok-free.app
    http:
      paths:
      - path: /WebAPI
        pathType: Prefix
        backend:
          service:
            name: webapi
            port:
              number: 8080
      - path: /atlas
        pathType: Prefix
        backend:
          service:
            name: atlas
            port:
              number: 8080
